<resources>
    <string name="app_name">Typicode</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Belum punya akun ? daftar disini</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="role">Role</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="success_register">Berhasil Register</string>
    <string name="failed_login">Gagal Login</string>
    <string name="hello_admin">Halo %s,</string>
    <string name="data_username">username: %s</string>
    <string name="data_email">email: %s</string>
    <string name="data_role">role: %s</string>
    <string name="detail">Detail</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="label_desc_verification">Untuk menghapus perlu memasukan password</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="wrong_password">Password Salah</string>
    <string name="success_delete">Berhasil Delete</string>
    <string name="success_update">Berhasil Update</string>
    <string name="thumbnail">thumbnail</string>
    <string name="logout">Logout</string>
    <string name="check_connection">Harap Check Koneksi Anda</string>
</resources>